[workspace]
resolver = "2"
members = [
    "bin/arb",
    "bin/relay",
    "crates/arb-common",
    "crates/dex-indexer",
    "crates/logger",
    "crates/object-pool",
    "crates/shio",
    "crates/simulator",
    "crates/utils",
    "crates/version",
]

[workspace.dependencies]
dex-indexer = { path = "crates/dex-indexer" }
mev_logger = { path = "crates/logger" }
object-pool = { path = "crates/object-pool" }
shio = { path = "crates/shio" }
simulator = { path = "crates/simulator" }
utils = { path = "crates/utils" }
version = { path = "crates/version" }
primitive-types = "0.13"

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
sui-network = { path = "/home/maliang/sui/crates/sui-network" }
sui-types = { path = "/home/maliang/sui/crates/sui-types" }
sui-core = { path = "/home/maliang/sui/crates/sui-core" }
sui-execution = { path = "/home/maliang/sui/sui-execution" }
sui-sdk = { path = "/home/maliang/sui/crates/sui-sdk" }
sui-config = { path = "/home/maliang/sui/crates/sui-config" }
sui-json-rpc = { path = "/home/maliang/sui/crates/sui-json-rpc" }
sui-json-rpc-types = { path = "/home/maliang/sui/crates/sui-json-rpc-types" }
sui-indexer = { path = "/home/maliang/sui/crates/sui-indexer" }
mysten-network = { path = "/home/maliang/sui/crates/mysten-network" }
typed-store = { path = "/home/maliang/sui/crates/typed-store" }
move-bytecode-utils = { path = "/home/maliang/sui/external-crates/move/crates/move-bytecode-utils" }
move-core-types = { path = "/home/maliang/sui/external-crates/move/crates/move-core-types" }
shared-crypto = { path = "/home/maliang/sui/crates/shared-crypto" }

async-trait = "0.1.61"
async-stream = "0.3"
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
bcs = "0.1.6"
prometheus = "0.13.3"
once_cell = "1.19.0"
itertools = "0.13.0"
eyre = "0.6.12"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
lazy_static = "1.5"
regex = "1.11"
cached = { version = "0.54", features = ["default", "async"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = { version = "6.0", features = ["serde"] }
burberry = { git = "https://github.com/tonyke-bot/burberry.git", rev = "8bdb3cadf18e9be01622f9acbe562ee2d4f65ac2", default-features = false, features = [
    "telegram",
] }
async-channel = "2.1"
num_cpus = "1.16"
bincode = "1.3.3"
interprocess = { version = "2", features = ["tokio"] }
rayon = "1.10"

[profile.release]
debug = false
